--- a/deployment/sites-enabled/default.conf
+++ b/deployment/sites-enabled/default.conf
@@ -1,7 +1,7 @@
 # Define connection details for connecting to django running in
 # a docker container.
-upstream uwsgi {
-    server uwsgi:8080;
+upstream django {
+    server django:8080;
 }
 
 upstream geoserver {
@@ -45,7 +45,7 @@ server {
     }
     # Finally, send all non-media requests to the Django server.
     location / {
-        uwsgi_pass  uwsgi;
+        uwsgi_pass  django;
         # the uwsgi_params file you installed needs to be passed with each
         # request.
         # the uwsgi_params need to be passed with each uwsgi request
