--- a/deployment/docker-geoserver/Dockerfile
+++ b/deployment/docker-geoserver/Dockerfile
@@ -1,7 +1,7 @@
 FROM geonode/geoserver:2.10.x
 MAINTAINER Kartoza
 
-# ADD resources /tmp/resources
+ADD resources /tmp/resources
 
 # Install any plugin zip files in resources/plugins
 RUN if ls /tmp/resources/plugins/*.zip > /dev/null 2>&1; then \
