--- a/deployment/production/docker/django_haitidata/Dockerfile
+++ b/deployment/production/docker/django_haitidata/Dockerfile
@@ -49,7 +49,7 @@ RUN pip install -r /requirements-haitidata.txt
 RUN apt-get -y --force-yes install gettext
 
 RUN apt-get install gdal-bin
-RUN git init && git remote add origin https://github.com/HaitiData/haitidata.git && git pull origin new-architecture
+RUN git init && git remote add origin https://github.com/HaitiData/haitidata.git && git pull origin development
 
 # Open port 8080 as we will be running our uwsgi socket on that
 EXPOSE 8080
