--- a/deployment/docker-compose.yml
+++ b/deployment/docker-compose.yml
@@ -7,6 +7,7 @@ services:
     image: kartoza/postgis:9.4-2.1
     volumes:
       - ./pg/postgres_data:/var/lib/postgresql
+      - ./backups:/backups
     environment:
       - USERNAME=docker
       - PASS=docker
@@ -161,6 +162,25 @@ services:
     command: /bin/true
     volumes:
       - /geoserver_data/data
+    network_mode: "bridge"
+
+  dbbackups:
+    image: kartoza/pg-backup:9.4
+    hostname: pg-djangobackups
+    container_name: haitidata-dbbackups
+    volumes:
+      - ./backups:/backups
+    links:
+      - postgres:db
+    environment:
+      - DUMPPREFIX=HAITIDATA
+      # These are all defaults anyway, but setting explicitly in
+      # case we ever want to ever use different credentials
+      - PGUSER=docker
+      - PGPASSWORD=docker
+      - PGPORT=5432
+      - PGHOST=db
+      - PGDATABASE=gis
     network_mode: "bridge"
 
 volumes:
