--- a/deployment/docker/Dockerfile
+++ b/deployment/docker/Dockerfile
@@ -33,9 +33,6 @@ ENV CPLUS_INCLUDE_PATH /usr/include/gdal
 ENV C_INCLUDE_PATH /usr/include/gdal
 ENV TEST a
 
-RUN cd /home/web && wget http://download.osgeo.org/gdal/$GDAL_VERSION/gdal-$GDAL_VERSION.tar.gz && tar -xvzf gdal-$GDAL_VERSION.tar.gz && rm /home/web/gdal-$GDAL_VERSION.tar.gz
-RUN cd /home/web/gdal-$GDAL_VERSION && ./configure -prefix=/usr/ && make && make install && cd /home/web/gdal-$GDAL_VERSION/swig/python && python setup.py install && rm -rf /home/web/gdal-$GDAL_VERSION
-
 COPY requirements.txt /requirements.txt
 RUN pip install -r /requirements.txt
 
@@ -47,7 +44,7 @@ RUN pip install -r /requirements-haitidata.txt
 # Install translation
 RUN apt-get -y --force-yes install gettext
 
-RUN apt-get install gdal-bin
+RUN apt-get install gdal-bin python-gdal -y
 # Open port 8080 as we will be running our uwsgi socket on that
 
 EXPOSE 8080
