--- a/deployment/Makefile
+++ b/deployment/Makefile
@@ -22,6 +22,14 @@ fresh-deploy: fresh-web
 	@docker exec -t -i $(PROJECT_ID)-postgres su - postgres -c "createdb -O docker -T template_postgis $(DATABASE_NAME)"
 	@docker exec -t -i $(PROJECT_ID)-postgres su - postgres -c "createdb -O docker -T template_postgis $(DATABASE_GEONODE_NAME)"
 
+geoserver:
+	@echo
+	@echo "------------------------------------------------------------------"
+	@echo "Building geoserver"
+	@echo "------------------------------------------------------------------"
+	@docker-compose -p $(PROJECT_ID) build geoserver
+	@docker-compose -p $(PROJECT_ID) up -d geoserver
+	@docker-compose -p $(PROJECT_ID) restart geoserver
 
 default: web
 run: build permissions web migrate collectstatic
