--- a/deployment/docker-compose.yml
+++ b/deployment/docker-compose.yml
@@ -16,11 +16,6 @@ services:
     restart: on-failure
     network_mode: "bridge"
 
-  elasticsearch:
-    container_name: haitidata-elasticsearch
-    image: elasticsearch
-    network_mode: "bridge"
-
   rabbitmq:
     container_name: haitidata-rabbitmq
     image: rabbitmq
@@ -31,7 +26,6 @@ services:
     build: ./docker
     links:
       - postgres
-      - elasticsearch
       - rabbitmq
       - geoserver
     volumes:
@@ -49,14 +43,13 @@ services:
       - DJANGO_SETTINGS_MODULE=core.settings.prod_docker
       - VIRTUAL_HOST=haitidata.com
       - VIRTUAL_PORT=8080
-      - PROXY_ALLOWED_HOSTS=192.168.1.6
+      - PROXY_ALLOWED_HOSTS=192.168.0.116
 
       # Ensure to change these based on server domain
-      - SITEURL=http://192.168.1.6:33300/  # change this to ip or domain location
-      - GEOSERVER_BASE_URL=http://192.168.1.6:33308/geoserver/ # change this to ip or domain geoserver
+      - SITEURL=http://192.168.0.116:33300/  # change this to ip or domain location
+      - GEOSERVER_BASE_URL=http://192.168.0.116:33308/geoserver/ # change this to ip or domain geoserver
       # Set your locale - you need to ensure this is created in Dockerfile too...
       - LC_ALL=en_US.UTF-8
-    restart: always
     network_mode: "bridge"
 
   # This is the entry point for a development server.
@@ -79,7 +72,6 @@ services:
       - ./logs:/var/log/
     links:
       - postgres
-      - elasticsearch
       - rabbitmq
       - geoserver
     ports:
@@ -95,7 +87,6 @@ services:
     links:
       - rabbitmq
       - postgres
-      - elasticsearch
     command: celery worker --app=geonode.celery_app:app -B -l INFO
     environment:
       - DATABASE_URL=postgres://postgres:postgres@postgres:5432/postgres
@@ -107,11 +98,11 @@ services:
       - DJANGO_SETTINGS_MODULE=core.settings.prod_docker
       - VIRTUAL_HOST=haitidata.com
       - VIRTUAL_PORT=8080
-      - PROXY_ALLOWED_HOSTS=192.168.1.6
+      - PROXY_ALLOWED_HOSTS=192.168.0.116
 
       # Ensure to change these based on server domain
-      - SITEURL=http://192.168.1.6:33300/  # change this to ip or domain location
-      - GEOSERVER_BASE_URL=http://192.168.1.6:33308/geoserver/ # change this to ip or domain geoserver
+      - SITEURL=http://192.168.0.116:33300/  # change this to ip or domain location
+      - GEOSERVER_BASE_URL=http://192.168.0.116:33308/geoserver/ # change this to ip or domain geoserver
       # Set your locale - you need to ensure this is created in Dockerfile too...
       - LC_ALL=en_US.UTF-8
     network_mode: "bridge"
@@ -123,6 +114,8 @@ services:
       - postgres
     ports:
       - "33308:8080"
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
     volumes_from:
       - data_dir_conf
     environment:
@@ -130,8 +123,8 @@ services:
       - PUBLIC_PORT=80
       - DOCKER_HOST_IP
       - DJANGO_URL=http://django:8000/
-      - SITEURL=http://192.168.1.6/
-      - GEOSERVER_BASE_URL=http://192.168.1.6:33308/geoserver/
+      - SITEURL=http://192.168.0.116/
+      - GEOSERVER_BASE_URL=http://192.168.0.116:33308/geoserver/
     network_mode: "bridge"
 
   geonode:
